--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "nightshift-hotels",
   "version": "1.0.0",
-  "description": "NightShift Hotels website + API for reservation alerts",
+  "description": "NightShift Hotels website + API for reservation alerts and reservation storage",
   "type": "module",
   "scripts": {
     "start": "vercel dev"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.1",
     "twilio": "^4.0.0",
     "@sendgrid/mail": "^7.7.0"
   }
