--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "vercel dev"
   },
   "dependencies": {
+    "twilio": "^4.0.0",
     "@sendgrid/mail": "^7.7.0",
-    "@supabase/supabase-js": "^2.39.3",
-    "twilio": "^4.0.0"
+    "@supabase/supabase-js": "^2.39.7"
   }
 }
