--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,8 @@
   "version": 2,
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "^/api/(.*)$",
       "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
     }
   ]
 }
