--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "routes": [
     { "src": "^/api/(.*)$", "dest": "/api/$1" },
-    { "src": "/dashboard", "dest": "/dashboard/index.html" }
+    { "src": "^/dashboard$", "dest": "/dashboard/index.html" },
+    { "src": "^/dashboard/(.*)$", "dest": "/dashboard/$1" }
   ]
 }
