--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,21 @@
 {
   "version": 2,
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api/$1" },
-    { "src": "^/dashboard$", "dest": "/dashboard/index.html" },
-    { "src": "^/dashboard/(.*)$", "dest": "/dashboard/$1" }
+    {
+      "src": "^/api/(.*)$",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "^/dashboard$",
+      "dest": "/dashboard/index.html"
+    },
+    {
+      "src": "^/dashboard/(.*)$",
+      "dest": "/dashboard/$1"
+    },
+    {
+      "src": "^/(.*)$",
+      "dest": "/$1"
+    }
   ]
 }
