--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,25 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "pricing.html", "use": "@vercel/static" },
+    { "src": "contact.html", "use": "@vercel/static" },
+    { "src": "faq.html", "use": "@vercel/static" },
+    { "src": "style.css", "use": "@vercel/static" },
+    { "src": "public/**", "use": "@vercel/static" },
+    { "src": "api/**/*.js", "use": "@vercel/node" }
+  ],
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api/$1" },
-    { "src": "^/dashboard$", "dest": "/public/dashboard/index.html" },
-    { "src": "^/dashboard/(.*)$", "dest": "/public/dashboard/$1" }
+    { "src": "/pricing", "dest": "/pricing.html" },
+    { "src": "/contact", "dest": "/contact.html" },
+    { "src": "/faq", "dest": "/faq.html" },
+
+    { "src": "/style.css", "dest": "/style.css" },
+
+    { "src": "/public/(.*)", "dest": "/public/$1" },
+
+    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
