--- a/vercel.json
+++ b/vercel.json
@@ -1,38 +1,23 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.html", "use": "@vercel/static" },
-    { "src": "pricing.html", "use": "@vercel/static" },
-    { "src": "faq.html", "use": "@vercel/static" },
-    { "src": "contact.html", "use": "@vercel/static" },
-
+    { "src": "*.html", "use": "@vercel/static" },
     { "src": "style.css", "use": "@vercel/static" },
-
     { "src": "public/**", "use": "@vercel/static" },
-
-    { "src": "dashboard/*.html", "use": "@vercel/static" },
-    { "src": "dashboard/*.js", "use": "@vercel/static" },
-    { "src": "dashboard/*.css", "use": "@vercel/static" },
-
-    { "src": "api/**/*.js", "use": "@vercel/node" }
+    { "src": "dashboard/**", "use": "@vercel/static" }
   ],
-
   "routes": [
     { "src": "/pricing", "dest": "/pricing.html" },
     { "src": "/faq", "dest": "/faq.html" },
     { "src": "/contact", "dest": "/contact.html" },
 
+    { "src": "/dashboard", "dest": "/dashboard/index.html" },
+    { "src": "/dashboard/", "dest": "/dashboard/index.html" },
+    { "src": "/dashboard/(.*)", "dest": "/dashboard/$1" },
+
     { "src": "/public/(.*)", "dest": "/public/$1" },
     { "src": "/style.css", "dest": "/style.css" },
 
-    { "src": "/dashboard/login", "dest": "/dashboard/login.html" },
-    { "src": "/dashboard/index", "dest": "/dashboard/index.html" },
-
-    { "src": "/dashboard/(.*)", "dest": "/dashboard/$1" },
-
-    { "src": "/api/(.*)", "dest": "/api/$1.js" },
-
-    { "src": "/", "dest": "/index.html" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/", "dest": "/index.html" }
   ]
 }
