--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,10 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "*.html", "use": "@vercel/static" },
-    { "src": "style.css", "use": "@vercel/static" },
-    { "src": "public/**", "use": "@vercel/static" },
-    { "src": "dashboard/**", "use": "@vercel/static" }
+    { "src": "dashboard/**", "use": "@vercel/static" },
+    { "src": "index.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/pricing", "dest": "/pricing.html" },
-    { "src": "/faq", "dest": "/faq.html" },
-    { "src": "/contact", "dest": "/contact.html" },
-
-    { "src": "/dashboard", "dest": "/dashboard/index.html" },
-    { "src": "/dashboard/", "dest": "/dashboard/index.html" },
     { "src": "/dashboard/(.*)", "dest": "/dashboard/$1" },
-
-    { "src": "/public/(.*)", "dest": "/public/$1" },
-    { "src": "/style.css", "dest": "/style.css" },
-
-    { "src": "/", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
